<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:padding="10dp"
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/enter_course_name">

        <requestFocus />
    </EditText>

    <EditText
        android:padding="10dp"
        android:id="@+id/codeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_course_code"
        android:ems="10" />

    <EditText
        android:id="@+id/unitEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_course_unit"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:padding="10dp"
        android:hint="@string/enter_instructor"
        android:id="@+id/instructorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_location"
        android:padding="10dp" />

    <Button
        android:id="@+id/addAnother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add_another_course" />
    
    <View
       android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@drawable/border" />

</LinearLayout>